--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <div>
         <h1 id="titulo" class="text-2xl font-semibold text-green-600">Cardápio da Cantina</h1>
         <p class="text-sm text-slate-500">
-          Cadastro de lanches (manhã/tarde) - Colégio Imperatriz 🍽️🥗🍖🍊🍮
+          Cadastro de lanches (manhã/tarde) - Colégio Imperatriz 🍽️🥗🍖🍊🍮 (v1.4)
         </p>
       </div>
     </div>
